feat: update to final Java24, remove preview features