@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~    Copyright 2024 Nacho Brito
+  ~    Copyright 2025 Nacho Brito
   ~
   ~    Licensed under the Apache License, Version 2.0 (the "License");
   ~    you may not use this file except in compliance with the License.
@@ -28,7 +28,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>23</maven.compiler.release>
+        <maven.compiler.release>24</maven.compiler.release>
         <json-schema-ref-parser-jvm.version>0.8.7</json-schema-ref-parser-jvm.version>
         <jcommander.version>2.0</jcommander.version>
         <native.maven.plugin.version>0.10.4</native.maven.plugin.version>
@@ -143,19 +143,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>23</source>
-                    <target>23</target>
-                    <enablePreview>true</enablePreview>
+                    <source>24</source>
+                    <target>24</target>
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
             <plugin>
                 <!-- Build an executable JAR -->
                 <groupId>org.apache.maven.plugins</groupId>
@@ -208,7 +200,6 @@
                             <executable>java</executable>
                             <workingDirectory>${project.build.directory}</workingDirectory>
                             <arguments>
-                                <argument>--enable-preview</argument>
                                 <argument>-classpath</argument>
                                 <classpath/>
                                 <argument>${mainClass}</argument>
@@ -275,9 +266,6 @@
                             <agent>
                                 <enabled>true</enabled>
                             </agent>
-                            <buildArgs>
-                                <buildArg>--enable-preview</buildArg>
-                            </buildArgs>
                         </configuration>
                     </plugin>
                 </plugins>
